[workspace]
resolver = "2"
members = [
	"contract",
	# "fuzz",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
arbitrary = "1.3"
cosmwasm-schema = "1.5"
cosmwasm-std = { version = "1.5" }
cw-multi-test = "1.1"
cw-storage-plus = "1.2"
cw2 = "1.1.2"
cw-utils = "1.0.3"
hex = "0.4.3"
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
libfuzzer-sys = "0.4"
proxy-contract = { path = "./packages/proxy" }
schemars = { version = "0.8", features = ["semver"] }
data-requests = { path = "./packages/data-requests" }
staking = { path = "./packages/staking" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-big-array = { version = "0.5" }
serde_json = "1.0"
sha3 = "0.10"
thiserror = { version = "1.0" }
semver = { version = "1.0", features = ["serde"] }
vrf-rs = { git = "ssh://git@github.com/sedaprotocol/vrf-rs.git" }