[workspace]
resolver = "2"
members = [
	"contract",
	# "fuzz",
	"xtask",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
anyhow = "1.0"
arbitrary = "1.3"
cosmwasm-schema = "1.5.5"
cosmwasm-std = { version = "1.5.5" }
cw-multi-test = "1.1.0"
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
cw2 = "1.1.2"
hex = "0.4.3"
indexmap = "2.2.6"
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
libfuzzer-sys = "0.4"
rand = "0.8"
schemars = { version = "0.8", features = ["semver"] }
seda-common = { git = "https://github.com/sedaprotocol/seda-common-rs.git", branch = "feat/dr-by-status-pagination" }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-big-array = { version = "0.5.1" }
serde_json = "1.0.117"
sha3 = "0.10"
thiserror = { version = "1.0" }
vrf-rs = "0.0.0"
xshell = "0.2"

seda-contract = { path = "./contract" }
