[workspace]
resolver = "2"
members = [
	"common",
	"contract",
	"proto-common",
	# "fuzz",
	"xtask",
]

[workspace.package]
rust-version = "1.82.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
anyhow = "1.0"
arbitrary = "1.3"
base64 = "0.22"
cosmos-sdk-proto = { version = "0.26", default-features = false }
cosmwasm-schema = "2.2"
cosmwasm-std = "2.2"
cw-multi-test = "2.3"
cw-storage-plus = "2.0"
cw-utils = "2.0"
cw2 = "2.0"
hex = "0.4.3"
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
lazy_static = "1.4"
libfuzzer-sys = "0.4"
num-bigfloat = { version = "1.7", default-features = false }
prost = { version = "0.13", default-features = false }
prost-types = { version = "0.13", default-features = false }
rand = "0.9"
schemars = { version = "0.8", features = ["semver"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-big-array = { version = "0.5.1" }
serde_json = "1.0"
sha3 = "0.10"
thiserror = { version = "2.0" }
tonic = { version = "0.12", default-features = false }
vrf-rs = "0.0.0"
xshell = "0.2"

seda-common = { path = "./common" }
seda-contract = { path = "./contract" }
seda-proto-common = { path = "./proto-common" }
