[package]
name = "seda-contract"
version = "0.2.1"
edition = "2021"
rust-version.workspace = true

exclude = [
	# Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
	"contract.wasm",
	"hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw-utils.workspace = true
cw2.workspace = true
hex.workspace = true
schemars.workspace = true
seda-common = { workspace = true, features = ["cosmwasm"] }
semver.workspace = true
serde.workspace = true
serde-big-array.workspace = true
sha3.workspace = true
thiserror.workspace = true
vrf-rs.workspace = true

[dev-dependencies]
cw-multi-test.workspace = true
k256.workspace = true
seda-common = { workspace = true, features = ["cosmwasm", "test-utils"] }
serde_json.workspace = true
lazy_static.workspace = true
