[package]
name = "seda-contract"
version = "1.0.2"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std = { workspace = true, features = ["cosmwasm_2_1"] }
cw-storage-plus.workspace = true
cw-utils.workspace = true
cw2.workspace = true
hex.workspace = true
schemars.workspace = true
seda-common = { workspace = true, features = ["cosmwasm"] }
semver.workspace = true
serde.workspace = true
serde-big-array.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
vrf-rs.workspace = true
seda-proto-common = { workspace = true, features = ["wasm_storage"] }

[dev-dependencies]
cw-multi-test = { workspace = true, features = ["cosmwasm_2_1", "stargate"] }
k256.workspace = true
lazy_static.workspace = true
seda-common = { workspace = true, features = ["cosmwasm", "test-utils"] }
num-bigfloat.workspace = true
