[package]
name = "seda-proto-common"
version = "0.4.0-dev.0"
edition = "2021"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true, optional = true }
cosmos-sdk-proto = { workspace = true, optional = true }
tonic = { workspace = true, optional = true, features = ["codegen", "prost"] }

[features]
default = []
all = [
	"batching",
	"data_proxy",
	"pubkey",
	"randomness",
	"staking",
	"vesting",
	"wasm_storage",
]
batching = ["cosmos"]
cosmos = ["dep:cosmos-sdk-proto"]
cosmwasm = ["cosmos", "cosmos-sdk-proto/cosmwasm"]
data_proxy = ["cosmos"]
pubkey = ["dep:prost-types"]
randomness = ["dep:prost-types"]
staking = ["cosmos", "dep:prost-types", "pubkey"]
vesting = ["cosmos"]
wasm_storage = ["cosmos", "dep:prost-types"]

std = ["prost/std"]
grpc = ["std", "tonic"]
grpc-transport = ["grpc", "tonic/transport"]
