[package]
name = "wasm-bin-storage"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-schema = "1.2"
cosmwasm-std = { version = "1.2", features = ["staking"] }
cw2 = "1.1"
cw-storage-plus = "1.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"